yaml/create-nginx-deployment-acr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: azurealpharegistry.azurecr.io/samples/nginx:1.21
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: acr-secret
