yaml/clusterip.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-node-deployment
  namespace: hello-node
  labels:
    app: hello-node
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-node
  template:
    metadata:
      labels:
        app: hello-node
    spec:
      containers:
      - name: hello-node
        image: wesreisz/hello-node:v2
        ports:
        - containerPort: 3000
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-node
  name: hello-node
  namespace: hello-node
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app: hello-node
  type: ClusterIP
