yaml/maproutesvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-front
spec:
  selector:
    app: hello-world 
  ports:
  - port: 80
    targetPort: 3000
