yaml/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-nodeport
spec:
  type: NodePort
  selector:
    app: hello-world
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
    nodePort: 30299 # This is the port that you would forward to the kind host. Or omit this key for a random port.
