yaml/app-deployment-combined.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-deployment
  namespace: hello-node
  labels:
    app: hello-world
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
      - name: hello-world
        image: wesreisz/hello-node:v4 
        ports:
        - containerPort: 3000
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-world
  name: hello-world
  namespace: hello-node
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: hello-world
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata: 
  name: hello-world
  namespace: hello-node
  labels:
    app: hello-world
spec: 
  virtualhost:
    fqdn: contour.wesleyreisz.com
  routes: 
    - conditions:
      - prefix: /
      services:
        - name: hello-world
          port: 80
