yaml/app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: nginx-app
  labels:
    app.kubernetes.io/name: proxy
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: proxy
  template:
    metadata:
      labels:   
        app.kubernetes.io/name: proxy 
    spec:
      containers:
      - name: nginx
        image: nginx:stable
        ports:
          - containerPort: 80
            name: http-web-svc

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: nginx-app
spec:
  selector:
    app.kubernetes.io/name: proxy
  ports:
  - name: name-of-service-port
    protocol: TCP
    port: 80
    targetPort: http-web-svc
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-app-ingress
  namespace: nginx-app
spec:
  rules:
    - http:
        paths:
          - path: /wes
            pathType: Exact
            backend:
              service:
                name:  nginx-service
                port:
                  number: 80
