yaml/httpproxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata: 
  name: hello-node
  namespace: hello-node
spec: 
  virtualhost:
    fqdn: hello.local
  routes: 
    - conditions:
      - prefix: /
      services:
        - name: hello-node 
          port: 80
