yaml/ingress.yaml
# Save to 'ingress.yaml'
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: azure-vote-ingress
  labels:
    app: azure-vote-front
spec:
  backend:
    serviceName: azure-vote-front
    servicePort: 80
