yaml/multi-ingress.yaml
# Save to 'ingress.yaml'
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: voting-app-ingress
  labels:
    app: azure-vote-front
spec:
  rules:
    - host: "demoapp.wesleyreisz.com"
      http: 
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              serviceName: azure-vote-front
              servicePort: 80
          - pathType: Prefix
            path: "/hello"
            backend:
              serviceName: hello-world-front
              servicePort: 80
